commit new pom